--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ body > #mobile-commmand {
           margin: 8px 0;
      }
 
-     body > #mobile-commmand > div > button {
+     body > #mobile-command > div > button {
           width: 25vw;
           height: 25vw;
           cursor: pointer;
@@ -86,7 +86,7 @@ body > #mobile-commmand {
      <div id="github-button">
           <a class="github-button" href="https://github.com/augustin7698/snake" data-color-scheme="no-preference: light; light: light; dark: dark_dimmed;" data-size="large" aria-label="Star augustin7698/snake on GitHub">Star</a>
      </div>
-     <div id="mobile-commmand">
+     <div id="mobile-command">
           <div>
                <button onclick="controle(37);">⏪</button>
                <button onclick="controle(38);">⏫</button>
