--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@ body > #mobile-commmand {
           display: none;
      }
 
-     body > #mobile-commmand {
+     body > #mobile-command {
           display: block;
           width: 80%;
           margin: 0 10%;
      }
 
-     body > #mobile-commmand > div {
+     body > #mobile-command > div {
           display: flex;
           justify-content: space-around;
           width: 100%;
